--- a/cmd/app/dev.sample.env
+++ b/cmd/app/dev.sample.env
@@ -5,12 +5,12 @@ export SERVER_TIME_ZONE="Asia/Baghdad"
 export GIN_MODE="debug" # [debug, release] // used by GIN
 
 # database
-export DATABASE_DATA_DSN="barez:barez@123@tcp(127.0.0.1:3306)/gopher?charset=utf8&parseTime=True&loc=Asia%2FBaghdad"
+export DATABASE_DATA_DSN="travis:@tcp(127.0.0.1:3306)/gopher?charset=utf8&parseTime=True&loc=Asia%2FBaghdad"
 export DATABASE_DATA_TYPE="mysql"
 export DATABASE_DATA_LOG="true"
 
 # activity database
-export DATABASE_ACTIVITY_DSN="barez:barez@123@tcp(127.0.0.1:3306)/gopher_activity?charset=utf8&parseTime=True&loc=Asia%2FBaghdad"
+export DATABASE_ACTIVITY_DSN="travis:@tcp(127.0.0.1:3306)/gopher_activity?charset=utf8&parseTime=True&loc=Asia%2FBaghdad"
 export DATABASE_ACTIVITY_TYPE="mysql"
 export DATABASE_ACTIVITY_LOG="true"
 
